# resume_classifier

./: .gitignore  README.md  pyproject.toml
resume_screening_with_python/: EDA.ipynb  resume_main.py
